--- a/your-code/notebooks/main.ipynb
+++ b/your-code/notebooks/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "10472       1.0.19  4.0 and up         NaN              NaN            True  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "10472       1.0.19  4.0 and up         NaN              NaN            True  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
        "       '619k'], dtype=object)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
        "0.15635089013928605"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,11 +864,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "App                   0\n",
+       "Category              0\n",
+       "Rating             1474\n",
+       "Reviews               0\n",
+       "Installs              0\n",
+       "Type                  1\n",
+       "Price                 0\n",
+       "Content Rating        1\n",
+       "Genres                0\n",
+       "Last Updated          0\n",
+       "Current Ver           8\n",
+       "Android Ver           3\n",
+       "Reviews_numeric       1\n",
+       "Reviews_isnull        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play.isna().sum()"
    ]
   },
   {
@@ -884,11 +910,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13596531685268887"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "google_play['Rating'].isna().sum()/len(google_play)"
    ]
   },
   {
@@ -910,11 +949,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "google_missing_removed = google_play.dropna(axis=0, how='any')"
    ]
   },
   {
@@ -930,11 +971,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\asgom\\AppData\\Local\\Temp\\ipykernel_9228\\2467473143.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  google_missing_removed['Last Updated'] = pd.to_datetime(google_missing_removed['Last Updated'])\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed['Last Updated'] = pd.to_datetime(google_missing_removed['Last Updated'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2018-01-07\n",
+       "1       2018-01-15\n",
+       "2       2018-08-01\n",
+       "3       2018-06-08\n",
+       "4       2018-06-20\n",
+       "           ...    \n",
+       "10834   2017-06-18\n",
+       "10836   2017-07-25\n",
+       "10837   2018-07-06\n",
+       "10839   2015-01-19\n",
+       "10840   2018-07-25\n",
+       "Name: Last Updated, Length: 9360, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "google_missing_removed['Last Updated']"
    ]
   },
   {
@@ -948,11 +1034,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['0', '$4.99', '$3.99', '$6.99', '$7.99', '$5.99', '$2.99', '$3.49',\n",
+       "       '$1.99', '$9.99', '$7.49', '$0.99', '$9.00', '$5.49', '$10.00',\n",
+       "       '$24.99', '$11.99', '$79.99', '$16.99', '$14.99', '$29.99',\n",
+       "       '$12.99', '$2.49', '$10.99', '$1.50', '$19.99', '$15.99', '$33.99',\n",
+       "       '$39.99', '$3.95', '$4.49', '$1.70', '$8.99', '$1.49', '$3.88',\n",
+       "       '$399.99', '$17.99', '$400.00', '$3.02', '$1.76', '$4.84', '$4.77',\n",
+       "       '$1.61', '$2.50', '$1.59', '$6.49', '$1.29', '$299.99', '$379.99',\n",
+       "       '$37.99', '$18.99', '$389.99', '$8.49', '$1.75', '$14.00', '$2.00',\n",
+       "       '$3.08', '$2.59', '$19.40', '$3.90', '$4.59', '$15.46', '$3.04',\n",
+       "       '$13.99', '$4.29', '$3.28', '$4.60', '$1.00', '$2.95', '$2.90',\n",
+       "       '$1.97', '$2.56', '$1.20'], dtype=object)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "google_missing_removed['Price'].unique()"
    ]
   },
   {
@@ -968,11 +1077,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\asgom\\AppData\\Local\\Temp\\ipykernel_9228\\1473319277.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  google_missing_removed['Price Numerical'] = pd.Series(google_missing_removed['Price']).str.replace('$', '')\n",
+      "C:\\Users\\asgom\\AppData\\Local\\Temp\\ipykernel_9228\\1473319277.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  google_missing_removed['Price Numerical'] = pd.Series(google_missing_removed['Price']).str.replace('$', '')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "google_missing_removed['Price Numerical'] = pd.Series(google_missing_removed['Price']).str.replace('$', '')"
    ]
   },
   {
@@ -984,11 +1110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\asgom\\AppData\\Local\\Temp\\ipykernel_9228\\2351642373.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  google_missing_removed['Price Numerical'] = pd.to_numeric(google_missing_removed['Price Numerical'], errors='coerce')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "google_missing_removed['Price Numerical'] = pd.to_numeric(google_missing_removed['Price Numerical'], errors='coerce')"
    ]
   },
   {
@@ -1000,11 +1141,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\asgom\\AppData\\Local\\Temp\\ipykernel_9228\\2049808471.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  google_missing_removed.drop(['Price'], axis=1, inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed.drop(['Price'], axis=1, inplace=True)"
    ]
   },
   {
@@ -1020,11 +1174,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "App                        object\n",
+       "Category                   object\n",
+       "Rating                    float64\n",
+       "Reviews                   float64\n",
+       "Installs                   object\n",
+       "Type                       object\n",
+       "Content Rating             object\n",
+       "Genres                     object\n",
+       "Last Updated       datetime64[ns]\n",
+       "Current Ver                object\n",
+       "Android Ver                object\n",
+       "Reviews_numeric           float64\n",
+       "Reviews_isnull               bool\n",
+       "Price Numerical           float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "google_missing_removed.dtypes"
    ]
   },
   {
@@ -1043,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
